# dns-cash

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  dns-cash.cpp  dns-cash.h  vcpkg.json
.github/workflows/: c-cpp.yml
src/callback/: DNSRequestCallback.h  ICallback.h
src/executors/: ThreadPool.cpp  ThreadPool.h
src/processor/: dns_parser.cpp  dns_parser.h  dns_processor.cpp  dns_processor.h
src/server/: DNSServer.cpp  DNSServer.h
src/utils/: cmdl_honly.h  tlru_cache.cpp  tlru_cache.h
test/dns-pyre/: run.bat
test/python-performance/: test_dns.py
